--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.3.1",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "vite": "^2.4.2",
     "vite-plugin-solid": "^2.0.0"
   },
